--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -81,14 +81,21 @@ h3 {
     text-decoration: none;
     border: 1px solid #e9e9e9;
     padding: 10px;
-    font-size: 12px;
+    font-size: 25px;
     border-radius: 5px;
     transition: color 0.2s ease, background-color 0.2s ease;
     color: #000;
 }
-  
+
 .btn-see-more:hover {
     cursor: pointer;
     background-color: rgb(37, 37, 37);
     color: #fff;
+    position: inline;
+}
+
+.btn-text {
+    font-size: 14px;
+    display:inline-block;
+    vertical-align:5px;
 }
