--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -1,4 +1,6 @@
 .weather-container {
+    background: -webkit-linear-gradient(-90deg, #B5D464 10%, #4C868E 90%);
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     transition: box-shadow 0.2s ease;
@@ -7,95 +9,67 @@
 }
 
 .weather-container:hover {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 15px;
 }
   
 .weather {
     display: flex;
     flex-direction: column;
-    background-color: #ffffff;
+    background-color: transparent;
+    color: #FFFFFF;
+    font-weight: bold;
+
 }
-  
-.hex-code {
-    font-size: 12px;
-    border-radius: 10px;
-    padding: 10px;
-    color: #fff;
-    transition: background-color 0.5s ease;
+
+.table tr {
+    height: 25px;
 }
-  
-.color {
-    display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
-    height: 50px;
-    cursor: pointer;
+
+td .color-negro{
+    color:black;
 }
-  
-.color:hover .hex-code {
-    background-color: #5e5e5e33;
+
+td .color-text{
+    color: white;
 }
-  
-.c0{
-    border-radius: 10px 10px 0 0;
-}
-  
-.c3{
-    border-radius: 0 0 10px 10px;
-}
-  
-h3 {
-    margin-bottom: 10px;
-}
-  
-.heart {
-    color: #fd5454;
-}
-  
-.fav {
-    display: flex;
-    text-align: center;
-    height: 34px;
-    width: 34px;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #e9e9e9;
-    padding: 5px;
-    border-radius: 5px;
-    transition: background-color 0.2s ease;
-}
-  
-.fav:hover {
-    cursor: pointer;
-    background-color: #f8f8f8;
+
+td .icons-weather {
+    color: #FFFFFF;
+    font-size: 20px;
+    position:absolute;
+    margin-top: -2px;
+    margin-left: 5px;
 }
   
 .weather-actions {
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 10px;
 }
   
 .btn-see-more {
+    background: #f58c2c;
     text-decoration: none;
-    border: 1px solid #e9e9e9;
-    padding: 10px;
-    font-size: 25px;
+    border: 2px solid #3f3d3d;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 5px 10px;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
     border-radius: 5px;
-    transition: color 0.2s ease, background-color 0.2s ease;
-    color: #000;
+    color: #FFFFFF;
+    float: right;
 }
 
 .btn-see-more:hover {
     cursor: pointer;
-    background-color: rgb(37, 37, 37);
-    color: #fff;
+    background-color:#FFFFFF;
+    color: #A3568A;
     position: inline;
 }
 
 .btn-text {
     font-size: 14px;
     display:inline-block;
-    vertical-align:5px;
+    vertical-align:3px;
 }
